--- a/index.html
+++ b/index.html
@@ -1,21 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rose Wood</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
-<style>
-    * {
-        font-family: 'Montserrat', sans-serif;
-    }
-</style>
-</head>
-<body>
-    <h1>Rose Wood</h1>
-    <p>Algo impresionante esta en construccion</p>    
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <div class="hero">
+      <div
+        class="hero-img"
+        
+        alt="Hero Image"
+      ></div>
+      <div class="hero-content">
+        <nav>
+          <div class="logo">Rose Wood</div>
+          <ul class="menu">
+            <li class="active">Home</li>
+            <li>About Me</li>
+            <li>Services</li>
+            <li>Training</li>
+            <li>Videos</li>
+            <li>Testimonials</li>
+            <li>Contact</li>
+          </ul>
+        </nav>
+        <div class="hero-text">
+          <h1>Rose Wood</h1>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae quae hic repudiandae voluptatibus amet aperiam mollitia velit asperiores ex sed nam illo molestias
+          </p>
+          <a href="#" title="call to action button">Conocer Mas</a>
+        </div>        
+      </div>
+    </div>
+  </body>
 </html>
