Include video in hero section

--- a/index.html
+++ b/index.html
@@ -24,21 +24,26 @@
         <nav>
           <div class="logo">Rose Wood</div>
           <ul class="menu">
-            <li class="active">Home</li>
-            <li>About Me</li>
-            <li>Services</li>
-            <li>Training</li>
-            <li>Videos</li>
-            <li>Testimonials</li>
-            <li>Contact</li>
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">Me</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Training</a></li>
+            <li><a href="#">Videos</a></li>
+            <li><a href="#">Testimonials</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
         </nav>
         <div class="hero-text">
-          <h1>Rose Wood</h1>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae quae hic repudiandae voluptatibus amet aperiam mollitia velit asperiores ex sed nam illo molestias
-          </p>
-          <a href="#" title="call to action button">Conocer Mas</a>
+          <div>
+            <h1>Rose Wood</h1>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae quae hic repudiandae voluptatibus amet aperiam mollitia velit asperiores ex sed nam illo molestias
+            </p>
+            <button>Conoce mas</button>
+          </div>
+          <div class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/HLFiaE2yN90" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
         </div>        
       </div>
     </div>
