--- a/index.html
+++ b/index.html
@@ -12,21 +12,24 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/hero.css" />
+    <link rel="stylesheet" href="css/about-us.css" />
+    <link rel="stylesheet" href="css/products.css" />
   </head>
   <body>
     <div class="hero">
-      <div
-        class="hero-img"
-        
-        alt="Hero Image"
-      ></div>
+      <div class="hero-img" alt="Hero Image"></div>
       <div class="hero-content">
         <nav>
-          <div class="logo">Rose Wood</div>
+          <div class="logo">
+            <span>Rose</span>
+            <span class="icon" style="margin-left: -5px"></span>
+            <span style="margin-left: -10px">Wood</span>
+          </div>
           <ul class="menu">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Me</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Products</a></li>
             <li><a href="#">Training</a></li>
             <li><a href="#">Videos</a></li>
             <li><a href="#">Testimonials</a></li>
@@ -37,14 +40,98 @@
           <div>
             <h1>Rose Wood</h1>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae quae hic repudiandae voluptatibus amet aperiam mollitia velit asperiores ex sed nam illo molestias
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
+              quae hic repudiandae voluptatibus amet aperiam mollitia velit
+              asperiores ex sed nam illo molestias
             </p>
+
             <button>Conoce mas</button>
           </div>
           <div class="video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/HLFiaE2yN90" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/HLFiaE2yN90"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
           </div>
-        </div>        
+        </div>
+      </div>
+    </div>
+    <div class="about-us">
+      <div class="about-us-content">
+        <div class="title">
+          <h4>01.</h4>
+          <div class="subtitle">
+            <h3>About Us</h3>
+            <h2>Our <span class="second-color">Story</span></h2>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis
+            tempora sed sint! Unde tenetur iste aut quos consequuntur nisi
+            incidunt architecto possimus ullam ducimus quia dicta voluptate
+            ipsum quibusdam quisquam molestiae cum, animi eum accusamus
+            repudiandae ratione porro! Autem fuga, consectetur error provident
+            consequuntur aspernatur quam quis laboriosam totam reiciendis.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores,
+            numquam dolorem temporibus quam reprehenderit ratione atque possimus
+            cupiditate tenetur eligendi.
+          </p>
+          <button>Mas Info</button>
+        </div>
+        <div class="image">
+          <img src="./public/image/uchuva.jpg" alt="" />
+        </div>
+      </div>
+      <nav>
+        <a href="#s1" title="title slide 1"> Go to Slide 1</a>
+        <a href="#s2" title="title slide 2"> Go to Slide 2</a>
+        <a href="#s3" title="title slide 3"> Go to Slide 3</a>
+        <a href="#s4" title="title slide 4"> Go to Slide 4</a>
+        <a href="#s5" title="title slide 5"> Go to Slide 5</a>
+      </nav>
+      <div class="about-us-content">
+        <div class="image" style="padding-left: 0">
+          <img src="./public/image/uchuva2.jpg" alt="" />
+        </div>
+        <div class="title" style="margin-top: 40px; margin-left: 40px">
+          <h4>02.</h4>
+          <div class="subtitle">
+            <h3>About Us</h3>
+            <h2>Our <span class="second-color">Mission</span></h2>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos
+            doloremque laudantium laboriosam sapiente ea, possimus fuga itaque
+            nihil molestiae recusandae!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores,
+            numquam dolorem temporibus quam reprehenderit ratione atque possimus
+            cupiditate tenetur eligendi.
+          </p>
+          <button>Mas Info</button>
+        </div>
+      </div>
+      <nav>
+        <a href="#s1" title="title slide 1"> Go to Slide 1</a>
+        <a href="#s2" title="title slide 2"> Go to Slide 2</a>
+        <a href="#s3" title="title slide 3"> Go to Slide 3</a>
+        <a href="#s4" title="title slide 4"> Go to Slide 4</a>
+        <a href="#s5" title="title slide 5"> Go to Slide 5</a>
+      </nav>
+    </div>
+    <div class="products">
+      <div class="products-img" alt="Hero Image"></div>
+      <div class="products-content">
+        <div class="title">
+          <h2>Our Products</h2>
+        </div>
       </div>
     </div>
   </body>
