--- a/index.html
+++ b/index.html
@@ -132,6 +132,48 @@
         <div class="title">
           <h2>Our Products</h2>
         </div>
+        <div class="products-container">
+          <div class="product">
+            <div class="product-img">
+              <img src="./public/image/uchuva.png" alt="" />
+              <div class="product-content">
+                <h3>Gooseberry</h3>
+                <p>
+                  A round, orange berry covered by a papery husk. It is also
+                  known as golden berry or Cape gooseberry and it has a
+                  sweet-tart taste
+                </p>
+                <button class="primary">Read More</button>
+              </div>
+            </div>
+          </div>
+          <div class="product">
+            <div class="product-img">
+              <img src="./public/image/maracuya.webp" alt="" />
+              <div class="product-content">
+                <h3>Passion Fruit</h3>
+                <p>
+                  Passion fruit is a nutritious tropical fruit that is gaining
+                  popularity, especially among health-conscious people.
+                </p>
+                <button class="primary">Read More</button>
+              </div>
+            </div>
+          </div>
+          <div class="product">
+            <div class="product-img">
+              <img src="./public/image/fresa.png" alt="" />
+              <div class="product-content">
+                <h3>Strawberry</h3>
+                <p>
+                  Strawberry is a nutritious tropical fruit that is gaining
+                  popularity, especially among health-conscious people.
+                </p>
+                <button class="primary">Read More</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
