--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <link rel="stylesheet" href="css/hero.css" />
     <link rel="stylesheet" href="css/about-us.css" />
     <link rel="stylesheet" href="css/products.css" />
+    <link rel="stylesheet" href="css/why-us.css" />
+    <link rel="stylesheet" href="css/footer.css" />
+    <script
+      src="https://kit.fontawesome.com/840ffdf974.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="hero">
@@ -30,7 +36,7 @@
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="#">Products</a></li>
-            <li><a href="#">Training</a></li>
+            <li><a href="#">Why Us?</a></li>
             <li><a href="#">Videos</a></li>
             <li><a href="#">Testimonials</a></li>
             <li><a href="#">Contact</a></li>
@@ -176,5 +182,92 @@
         </div>
       </div>
     </div>
+    <div class="why-us">
+      <div class="why-us-img" alt="Hero Image"></div>
+      <div class="why-us-content">
+        <div class="title">
+          <h2>Why Us?</h2>
+        </div>
+        <div class="why-us-list">
+          <div class="why-us-item">
+            <i class="fa-solid fa-list-check fa-3x"></i>
+            <h3>Quality</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+              natus repellendus harum nemo, eius exercitationem.
+            </p>
+          </div>
+          <div class="why-us-item">
+            <i class="fa-solid fa-industry fa-3x"></i>
+            <h3>Technification</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+              natus repellendus harum nemo, eius exercitationem.
+            </p>
+          </div>
+          <div class="why-us-item">
+            <i class="fa-regular fa-lightbulb fa-3x"></i>
+            <h3>Innovation</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+              natus repellendus harum nemo, eius exercitationem.
+            </p>
+          </div>
+          <div class="why-us-item">
+            <i class="fa-solid fa-expand fa-3x"></i>
+            <h3>Expantion</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+              natus repellendus harum nemo, eius exercitationem.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="footer-content">
+        <div class="footer-container">
+          <div class="footer-logo">
+            <div class="logo">
+              <span>Rose</span>
+              <span class="icon" style="margin-left: -5px"></span>
+              <span style="margin-left: -10px">Wood</span>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+                molestias reprehenderit, corrupti excepturi impedit laborum,
+                blanditiis at, nam quas saepe quaerat similique culpa eligendi
+                atque delectus nostrum eaque earum! Quas laborum soluta officiis
+                ipsa. Quos, incidunt iure. Maxime dolorem commodi quaerat,
+                facilis voluptatum quasi alias atque, aperiam inventore officiis
+                quod.
+              </p>
+            </div>
+          </div>
+          <div class="footer-menu">
+            <h3>EXPLORE</h3>
+            <div>About Us</div>
+            <div>Products</div>
+            <div>Why Us</div>
+          </div>
+          <div class="social">
+            <h3>SOCIAL</h3>
+            <div class="social-container">
+              <div>
+                <i class="fa-brands fa-facebook fa-2x"></i>
+              </div>              
+              <div>
+                <i class="fa-brands fa-whatsapp fa-2x"></i>
+              </div>
+              <div>
+                <i class="fa-brands fa-instagram fa-2x"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="design">
+        Design by Julian Barragan - julbarg@gmail.com
+      </div>
+    </footer>
   </body>
 </html>
