--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/products.css" />
     <link rel="stylesheet" href="css/why-us.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="icon" type="image/x-icon" href="./public/image/favicon.ico">
     <script
       src="https://kit.fontawesome.com/840ffdf974.js"
       crossorigin="anonymous"
